# PaegLab

./: .gitignore
lab1/: CMakeLists.txt  LabBallotPaper.cpp  LabBallotPaper.h  LabCandidate.h  LabCentralElectionCommission.cpp  LabCentralElectionCommission.h  LabCorruptCentralElectionCommission.cpp  LabCorruptCentralElectionCommission.h  LabRSA.cpp  LabRSA.h  LabVoter.h  main.cpp
lab2/: CMakeLists.txt  LabBallot.cpp  LabBallot.h  LabCandidate.h  LabCentralElectionCommission.cpp  LabCentralElectionCommission.h  LabCorruptCentralElectionCommission.cpp  LabCorruptCentralElectionCommission.h  LabLocalVoter.h  LabMaskedBallotSetArray.cpp  LabMaskedBallotSetArray.h  LabRSA.cpp  LabRSA.h  LabVoter.h  main.cpp
lab3/: CMakeLists.txt  LabBallot.cpp  LabBallot.h  LabCandidate.h  LabCorruptElectionCommission.cpp  LabCorruptElectionCommission.h  LabCorruptRegistrationBureau.cpp  LabCorruptRegistrationBureau.h  LabCrypto.cpp  LabCrypto.h  LabElectionCommission.cpp  LabElectionCommission.h  LabLocalVoter.h  LabPublicVoter.h  LabRBVoter.h  LabRegistrationBureau.cpp  LabRegistrationBureau.h  main.cpp
lab4/: CMakeLists.txt  LabBallot.cpp  LabBallot.h  LabBigInt.h  LabCandidate.h  LabCrypto.cpp  LabCrypto.h  LabTestCase.h  LabVoter.cpp  LabVoter.h  main.cpp
lab5/: CMakeLists.txt  LabBallot.cpp  LabBallot.h  LabBigInt.cpp  LabBigInt.h  LabCandidate.h  LabCentralElectionCommission.cpp  LabCentralElectionCommission.h  LabCorruptCentralElectionCommission.cpp  LabCorruptCentralElectionCommission.h  LabCorruptElectionCommission.cpp  LabCorruptElectionCommission.h  LabCrypto.cpp  LabCrypto.h  LabElectionCommission.cpp  LabElectionCommission.h  LabTestCase.h  LabVoter.cpp  LabVoter.h  main.cpp
lab6/: CMakeLists.txt  LabBallot.cpp  LabBallot.h  LabBigInt.cpp  LabBigInt.h  LabCandidate.h  LabCorruptElectionCommission.cpp  LabCorruptElectionCommission.h  LabCorruptRegistrationBureau.cpp  LabCorruptRegistrationBureau.h  LabCrypto.cpp  LabCrypto.h  LabECToken.h  LabElectionCommission.cpp  LabElectionCommission.h  LabRegistrationBureau.cpp  LabRegistrationBureau.h  LabTestCase.h  LabVoter.cpp  LabVoter.h  LabVoterToken.h  elgamalprime.py  main.cpp
